--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -13,3 +13,20 @@
 	height: 28px;
 	color: #000000;
 }
+
+@mixin something-3 {
+    color: #8A8787;
+    width: 238px;
+    height: 36px;
+    margin-top: 10px;
+    margin-left: 26px;
+}
+
+@mixin something-4 {
+    width: 196px;
+	height: 28px;
+	color: #000000;
+	margin-left: 60px;
+	margin-top: 20px;
+	font-size: 20px;
+}
